# fafsa

./: ASSIGNMENT.md  DECISIONS.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
app/: main.py  models.py
app/rules/: __init__.py  engine.py  helpers.py  models.py
tests/fixtures/: rules.yaml
tests/integration/app/: test_main.py
tests/unit/app/rules/: test_engine.py  test_helpers.py
